fix response swagger2
